# quokka

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  doxygen.cfg  gen_ref_pages.py  ida-plugin.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sdk_lockfile  setup.py
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/workflows/: binaryninja.yml  build.yml  doc.yml  ghidra.yml  python.yml  release.yml  zizmor.yml
FAQ/: index.html
binaryninja_extension/: README.md  __init__.py  export_headless.py  generate_proto.py  install_dev.py  plugin.json  requirements-dev.txt  requirements.txt
binaryninja_extension/bn_quokka/: __init__.py  context.py  export.py  quokka_pb2.py  util.py  version.py
binaryninja_extension/bn_quokka/exporters/: __init__.py  binary.py  cfg.py  instructions.py  references.py  types.py
binaryninja_extension/proto/: quokka.proto
binaryninja_extension/tests/: conftest.py  test_cfg_edges.py  test_collect_headers.py  test_data_xrefs.py  test_export_smoke.py  test_extern_segments.py  test_headless_export.py  test_heuristics.py  test_plugin_task.py  test_type_aliases.py  test_version.py
bindings/python/quokka/: __init__.py  __main__.py  addresser.py  block.py  c_type_parser.py  data.py  data_type.py  enums.py  exc.py  executable.py  function.py  instruction.py  program.py  quokka_pb2.py  reference.py  segment.py  structure.py  types.py  utils.py  version.py
blocks/: index.html
ci/: build.dockerfile  publish.dockerfile
cmake/: FindIdaSdk.cmake  protobuf.cmake
contributing/: index.html
decompilation/: index.html
dev/: index.html
docs/: FAQ.md  README.md  blocks.md  contributing.md  decompilation.md  dev.md  doxygen.py  example.md  features.md  functions.md  gen_ref_pages.py  installation.md  instructions.md  pcode.md  philosophy.md  program.md  roadmap.md  types.md  usage.md  write_feature.md  xrefs.md
docs/css/: extra.css
docs/samples/: qb-crackme  qb-crackme.Quokka  qb-crackme.quokka
docs/tutorial/: 02_functions.md  04_instructions.md  07_solving.md
docs/tutorials/bionic/: SUMMARY.md  final.md  introduction.md  strategy.md
docs/tutorials/features/: 00_intro.md  01_block.md  02_functions.md  03_final.md  SUMMARY.md
docs/tutorials/qb-crackme/: 00_intro.md  01_load.md  02_functions.md  03_blocks.md  04_instructions.md  05_references.md  06_other.md  07_solving.md  SUMMARY.md
example/: index.html
features/: index.html
functions/: index.html
ghidra_extension/: README.md  build.gradle  extension.properties  ghidra_scripts  settings.gradle
include/quokka/: Block.h  Bucket.h  Comment.h  Compatibility.h  Data.h  DataType.h  FileMetadata.h  Function.h  Imports.h  Instruction.h  Layout.h  Localization.h  Logger.h  LzmaStreambuf.h  ProtoHelper.h  ProtoWrapper.h  Quokka.h  Reference.h  Segment.h  Settings.h  Util.h  Version.h  Version.h.in  Windows.h  Writer.h
include/quokka/api_v8/: Comment_v8.h  DataType_v8.h
include/quokka/api_v9/: Comment_v9.h
installation/: index.html
instructions/: index.html
java/: .gitignore  README.md  build.gradle  extension.properties  gradle.properties  settings.gradle
pcode/: index.html
philosophy/: index.html
program/: index.html
proto/: CMakeLists.txt  quokka.proto
reference/cpp/: Block_8h.html  Block_8h__dep__incl.dot  Block_8h__incl.dot  Block_8h_source.html  Bucket_8h.html  Bucket_8h__dep__incl.dot  Bucket_8h__incl.dot  Bucket_8h_source.html  Comment_8h.html  Comment_8h__dep__incl.dot  Comment_8h__incl.dot  Comment_8h_source.html  Comment__v8_8h.html  Comment__v8_8h__dep__incl.dot  Comment__v8_8h__incl.dot  Comment__v8_8h_source.html  Comment__v9_8h.html  Comment__v9_8h__incl.dot  Comment__v9_8h_source.html  Compatibility_8h.html  Compatibility_8h__dep__incl.dot  Compatibility_8h__incl.dot  Compatibility_8h_source.html  DataType_8h.html  DataType_8h__dep__incl.dot  DataType_8h__incl.dot  DataType_8h_source.html  DataType__v8_8h.html  DataType__v8_8h__incl.dot  DataType__v8_8h_source.html  Data_8h.html  Data_8h__dep__incl.dot  Data_8h__incl.dot  Data_8h_source.html  FileMetadata_8h.html  FileMetadata_8h__dep__incl.dot  FileMetadata_8h__incl.dot  FileMetadata_8h_source.html  Function_8h.html  Function_8h__dep__incl.dot  (+352 more)
reference/cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+67 more)
reference/python/SUMMARY/: index.html
reference/python/addresser/: index.html
roadmap/: index.html
samples/: qb-crackme.quokka
scripts/: LaunchQBinExport.py  QBinExport.idc  fetch_ghidra.sh  fetch_sdk.bat  fetch_sdk.sh  refresh_quokka_lfs.sh  speed_test.py
search/: search_index.json
src/: Block.cpp  CMakeLists.txt  Comment.cpp  Compatibility.cpp  Data.cpp  DataType.cpp  FileMetadata.cpp  Function.cpp  Imports.cpp  Instruction.cpp  Layout.cpp  Quokka.cpp  Reference.cpp  Segment.cpp  Util.cpp  Version.cpp.in  Writer.cpp
src/api_v8/: Comment.cpp  Data.cpp  DataType.cpp  Reference.cpp
src/api_v9/: Comment.cpp  Data.cpp  DataType.cpp  Reference.cpp
tests/: CMakeLists.txt  README.md
tests/cpp/: Block_test.cpp  Bucket_test.cpp  CMakeLists.txt  Proto_test.cpp  Util_test.cpp
tests/cpp/ida/: CMakeLists.txt  Quokka_test.cpp
tests/cpp/standalone/: CMakeLists.txt  DataType_test.cpp
tests/dataset/: StatusCodeHandlerPei.efi  many_types.c  many_types.cpp  many_types_cpp  many_types_cpp.quokka  many_types_cpp_ghidra.quokka  nf_nat_pt.ko  puraUpdate  puraUpdate.quokka  puraUpdate_ghidra.quokka  qb-crackme_binja.quokka  sig_test  sig_test_source.c
types/: index.html
usage/: index.html
write_feature/: index.html
xrefs/: index.html
(+142 files in other folders)
